# airtable_rs

./: .env  Cargo.toml  README.md
examples/: create_records.rs  create_records_with_error_handling.rs  get_record.rs  list_records.rs  list_records_example.rs  update_records.rs  upload_records.rs
src/: lib.rs  main.rs  request_testing.rs
src/client/: client.rs  error.rs  mod.rs
src/endpoints/: records.rs
src/types/: mod.rs  params.rs  records.rs
