[package]
name = "airtable_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }  # Required for async runtime
serde = { version = "1", features = ["derive"] } # For JSON serialization/deserialization
serde_json = "1.0.139"
