[package]
name = "airtable_helper"
version = "0.1.0"
edition = "2021"
description = "A Rust library to interact with Airtable."
license = "MIT"

[dependencies]
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.139"
dotenv = "0.15.0"

[lib]
name = "airtable_helper"
path = "src/lib.rs"